# device_config

./: Cargo.toml  Cross.toml  README.md
config_lib/: Cargo.toml
config_lib/examples/: simple.rs  simple_config.toml
config_lib/src/: device_config.rs  lib.rs  toml_parser.rs
docs/build'n'deploy/: README.md
docs/vscode/: Install.md  vs_code_extensions_list.txt
menu_tui/: Cargo.toml  TODO.md
menu_tui/examples/: simple.rs  simple_config.toml
menu_tui/src/: lib.rs  menu_navigation.rs  menu_process.rs  menu_rendering.rs  user_parameters.rs
menu_tui/src/views/: config_view.rs  exit_view.rs  main_view.rs  mod.rs  update_view.rs
protocol_lib/: Cargo.toml  MU Protocol.md
protocol_lib/src/: client.rs  lib.rs  mu_frame.rs
rk_nku_configs/: nku_scheme.toml  rk3399_scheme.toml
rk_nku_menu/: Cargo.toml
rk_nku_menu/assets/: style.toml
rk_nku_menu/src/: main.rs
rk_nku_sync/: Cargo.toml
rk_nku_sync/src/: main.rs  nku_client.rs  serial_config.rs
