[package]
name = "menu_tui"
version = "0.2.0"
edition = "2024"
authors.workspace = true

[dependencies]
clap = { workspace = true }
config_lib = { path = "../config_lib" }
cursive = {version = "0.21.1", features = ["toml"]}

crossterm = "0.25.0"
log = { workspace = true }
env_logger = { workspace = true }
