[package]
name = "rk_smart_menu"
version = "0.1.0"
edition = "2024"
authors.workspace = true

[dependencies]
thiserror = "2.0"
gpiocdev-embedded-hal = "0.1.2"
gpiocdev = "0.7.3"
log = { workspace = true }
env_logger = { workspace = true }
config_lib = { path = "../config_lib" }
menu_tui = { path = "../menu_tui" }
